--- a/Robomaster_Data/boot.config
+++ b/Robomaster_Data/boot.config
@@ -1,3 +1,11 @@
+player-connection-mode=Listen
+player-connection-guid=3254521243
+player-connection-debug=0
+player-connection-project-name=Robomaster
+player-connection-wait-timeout=-1
+player-connection-ip=192.168.56.1
+player-connection-ip=10.89.133.147
+profiler-enable=1
 wait-for-native-debugger=0
 vr-enabled=0
 hdr-display-enabled=0
